# muumuu8181

./: .env  .env.production  .gitignore  DEVIN_GAS_GUIDELINES.md  Jenkinsfile  README.md  app.py  docker-compose.yml  game.js  game.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tech_articles_20250125_125358.json  tech_news_extractor.py  tsconfig.node.json  vite.config.ts
.gcp/: credentials.json
.github/workflows/: lint.yml
app/: main.py
app/routes/: image.py
app/services/: image_recognition.py
aws/: build-and-push.sh  setup-ecs.sh
character_generator/: README.md  generate_random_characters.py  requirements.txt  test_generation.py
character_generator/src/: pipeline.py
docs/: bypassing-login-systems.md  project_status.md  version_0.2.md  ログイン突破1.md  ログイン突破10.md  ログイン突破2.md  ログイン突破3.md  ログイン突破4.md  ログイン突破5.md  ログイン突破6.md  ログイン突破7.md  ログイン突破8.md  ログイン突破9.md  開発手順.md
docs/gas/: implementation_journey.md
docs/gas-guide/: README.md  custom-menu.gs  custom-menu.md  implementation-guide.md
docs/gcp/: README.md
docs/guidelines/: INTEGRATION.md  README.md
docs/guides/: notebooklm-login.md
galaxy_simulation/: console_simulation.py
galaxy_simulation/enhanced/: index.html
galaxy_simulation/four_panel/: index.html
google-news-scraper/backend/news_scraper/: Dockerfile  news_archive.txt  pyproject.toml
google-news-scraper/backend/news_scraper/app/: main.py  models.py  scraper.py
health-tracker/src/: App.tsx  types.ts
image-recognition-api/: .env.example  Dockerfile  pyproject.toml
image-recognition-api/app/routes/: image.py
image-recognition-api/app/utils/: logger.py
image-recognition-api/aws/: task-definition.json
image-recognition-api/tests/: test_image_recognition.py
lambda/health-tracker-sync/: README.md  index.ts  package.json  template.yaml
news_fetcher/: .gitignore  README.md  __init__.py  content_fetcher.py  news_fetcher.py  requirements.txt  scheduler.py  url_indexer.py  verify_content.py  verify_index.py
news_portal/: README.md  USAGE.md
news_portal/news_portal_backend/: Dockerfile  README.md  fly.toml  pyproject.toml
news_portal/news_portal_backend/app/: fetcher.py  main.py  url_config.json
news_portal/news_portal_frontend/: .env  index.html  (+3 more)
src/: App.tsx  constants.ts  hello_button.py  index.css  types.ts
tests/: test_image_recognition.py
(+45 files in other folders)
