[tool.poetry]
name = "app"
version = "0.1.0"
description = "Google News Scraper"
authors = ["Devin <devin@devin.ai>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
APScheduler = "^3.10.4"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
